Fixed a text spacing issue in index.html, rewrote longhand css as shorthand.

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,12 +4,8 @@
 }
 
 body {
-  background: url("../images/background_image.jpg") no-repeat center center
-    fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background: url("../images/background_image.jpg") no-repeat center center /
+    cover fixed;
 }
 
 section {
@@ -18,43 +14,38 @@ section {
   padding: 1.5%;
   border: 1px solid #aaa;
   border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.75);
+  background: rgba(255, 255, 255, 0.75);
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 h1 {
-  font-family: "Futurist", sans-serif;
-  font-size: 60px;
+  font: 60px "Futurist", sans-serif;
   color: #f87839;
-  margin-bottom: 0;
+  margin: auto auto 0 auto;
 }
 
 h2 {
-  font-family: "Futurist", sans-serif;
-  font-size: 30px;
+  font: 30px "Futurist", sans-serif;
 }
 
 section > h2 {
-  font-family: "Georama", sans-serif;
-  font-style: italic;
+  font: italic 30px "Georama", sans-serif;
 }
 
 h3 {
-  font-family: "Georama", sans-serif;
-  font-weight: bold;
+  font: bold 20px "Georama", sans-serif;
   letter-spacing: 2px;
 }
 
 p {
-  font-family: "Georama", sans-serif;
+  font: 16px "Georama", sans-serif;
   line-height: 1.5em;
 }
 
 ol > li {
-  font-family: "Georama", sans-serif;
-  font-weight: bold;
+  font: bold 20px "Georama", sans-serif;
 }
 
 ol > li > ul {
